footer added and spacing issues fixed at base

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,15 @@ tbody {
   font-family: 'Oswald', sans-serif;
 }
 
+body {
+  padding-bottom: 0;
+  margin: 0;
+}
+
+footer {
+  padding-bottom: 10px;
+}
+
 .card {
   border: 0;
 }
@@ -28,25 +37,17 @@ tbody {
 .background {
   background: url("http://www.pptbackgrounds.org/uploads/brick-seamless-orange-backgrounds-wallpapers.jpg");
   position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin: 0;
   z-index: -2;
 }
 
 .layer {
-     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3); 
-     padding: 20px;
+  background-image: linear-gradient(180deg, rgba(3, 0, 0, 0.814), rgba(3, 0, 0, 0.250));
+  padding-top: 10vh;
+  padding-bottom: 10vh;
   z-index: -1;
-}
 
-/* .layer {
-  background-color: rgba(81, 81, 81, 0.7);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
+}
 
 /* parralax to override materialize.css */
 
